@@ -1,3 +1,8 @@
+2008-01-30  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* GetLastErrorMustBeCalledRightAfterPInvokeTest.cs: More unit 
+	tests by Andreas Noever to reduce false-positives.
+
 2008-01-29  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* MarshalStringsInPInvokeDeclarationsTest.cs: New. Unit tests
